First changes made

--- a/src/layouts/components/KeyFeatures.astro
+++ b/src/layouts/components/KeyFeatures.astro
@@ -3,7 +3,7 @@ import { markdownify } from "@/lib/utils/textConverter";
 import { Image } from "astro:assets";
 import HomapageFeature from "@/layouts/function-components/HomapageFeature";
 const { key_features } = Astro.props;
-const { title, description, feature_list } = key_features;
+const { title, description, feature_list, footer_title, footer_description } = key_features;
 ---
 
 <section class="section key-feature relative">
@@ -24,5 +24,16 @@ const { title, description, feature_list } = key_features;
       </div>
     </div>
     <HomapageFeature feature_list={feature_list} client:load />
+    <div class="mt-10 row justify-between text-center lg:text-start">
+      <div class="lg:col-5">
+        <h2 set:html={markdownify(footer_title)} />
+      </div>
+      <div class="mt-0 lg:col-6 lg:mt-12
+      ">
+        <a class="btn btn-white btn-sm border-border" href="/signin">
+          Explore Our Services</a
+        >
+      </div>
+    </div>
   </div>
 </section>
