`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/layouts/components/Service.astro
+++ b/src/layouts/components/Service.astro
@@ -1,10 +1,7 @@
 ---
 import HomepageTab from "@/layouts/function-components/HomepageTab";
-import VideoComponent from "@/layouts/function-components/VideoComponent";
-import { AiFillCheckCircle, AiFillCheckSquare } from "react-icons/ai";
-import { Image } from "astro:assets";
 const { service } = Astro.props;
-const { homepage_tab, our_service } = service;
+const { homepage_tab } = service;
 ---
 
 <section class="section services">
