--- a/src/layouts/partials/Cta.astro
+++ b/src/layouts/partials/Cta.astro
@@ -19,10 +19,10 @@ const {
         <div class="row">
           <div class="lg:col-7">
             <h2 class="h1 text-white">{title}</h2>
-            <a class="btn btn-white mt-8" href={link}>{label}</a>
+            <a class="btn btn-white mt-12" href={link}>{label}</a>
           </div>
-          <div class="mt-8 lg:col-5 lg:mt-0">
-            <p class="text-white">
+          <div class="mt-8 lg:col-5 lg:mt-1">
+            <p class="text-white text-4xl leading-10">
               {description}
             </p>
           </div>
