--- a/src/layouts/components/about/Works.astro
+++ b/src/layouts/components/about/Works.astro
@@ -9,11 +9,11 @@ const {
   <div class="container">
     <div class="row items-center justify-between">
       <div class="md:col-5">
-        <h2 class="text-center md:text-left" set:html={title} />
+        <h5 class="text-center md:text-left" set:html={title} />
       </div>
       {
         button.enable && (
-          <div class="mt-6 text-center md:col-3 md:mt-0 md:text-right">
+          <div class="mt-6 text-center md:col-4 lg:col-6 md:mt-0 md:text-right">
             <a class="btn btn-primary" href={button.link}>
               {button.label}
             </a>
