--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,13 +2,12 @@
 import PageHeader from "@/components/PageHeader.astro";
 import Shape from "@/components/Shape.astro";
 import Gallery from "@/components/about/Gallery.astro";
-import OurMembers from "@/components/about/OurMembers.astro";
 import Works from "@/components/about/Works.astro";
 import Base from "@/layouts/Base.astro";
 import { getEntryBySlug } from "astro:content";
 
 const about = await getEntryBySlug("about", "index");
-const { counter, gallery, features, members } = about.data;
+const { gallery, features } = about.data;
 const page_data = {
   ...about.data,
   content: about.body,
@@ -31,7 +30,6 @@ const page_data = {
       <Gallery gallery={gallery} />
       <!-- our works -->
       <Works features={features} />
-      <!-- our members -->
     </div>
   </section>
 </Base>
