`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/pages/industries/index.astro
+++ b/src/pages/industries/index.astro
@@ -66,11 +66,11 @@ const page_data = {
   </section>
   <!-- <CareerBenifits benifits={benifits} /> -->
   <CareerBenifits benifits={benifits} client:load />
-  <JobPosts
+  <!-- <JobPosts
     client:load
     categories={categories}
     career={career}
     posts={jobposts}
-  />
+  /> -->
   <Cta />
 </Base>
