`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/pages/industries/index.astro
+++ b/src/pages/industries/index.astro
@@ -14,7 +14,7 @@ import type { TCareerIndex } from "@/types";
 
 const careerIndex = (await getEntryBySlug<any, string>(
   "careers",
-  "-index",
+  "-index"
 )) as TCareerIndex;
 const { benifits, career, image } = careerIndex.data;
 const categories = await getTaxonomy("careers", "categories");
