--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -22,7 +22,9 @@ const page_data = {
   image={contact.image}
 >
   <section class="page-hero pb-6 pt-16">
-    <div class="container"><PageHeader page_data={page_data} /></div>
+    <div class="container">
+      <PageHeader page_data={page_data} />
+    </div>
     <ChatUI client:load />
   </section>
 
