--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,6 +5,7 @@ import Base from "@/layouts/Base.astro";
 import { Image } from "astro:assets";
 import { getEntryBySlug } from "astro:content";
 import ChatUI from "@/chat/ChatUI";
+import '../styles/markdown.css'
 
 const entry = await getEntryBySlug("contact", "index");
 const { contact_form_action } = config.params;
