--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,11 +3,11 @@ import PageHeader from "@/components/PageHeader.astro";
 import config from "@/config/config.json";
 import Base from "@/layouts/Base.astro";
 import { Image } from "astro:assets";
-import { getEntryBySlug } from "astro:content";
 import ChatUI from "@/chat/ChatUI";
 import '../styles/markdown.css'
+import { getEntry } from 'astro:content';
 
-const entry = await getEntryBySlug("contact", "index");
+const entry = await getEntry('contact', 'index');
 const { contact_form_action } = config.params;
 const contact = entry.data;
 const page_data = {
