--- a/src/layouts/components/KeyFeatures.astro
+++ b/src/layouts/components/KeyFeatures.astro
@@ -30,7 +30,7 @@ const { title, description, feature_list, footer_title, footer_description } = k
       </div>
       <div class="mt-4 lg:col-8 lg:mt-6
       ">
-        <a class="btn btn-white btn-sm border-border" href="/signin">
+        <a class="btn btn-white btn-sm border-border" href="/services">
           Explore Our Services</a
         >
       </div>
