--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -15,9 +15,9 @@ code {
 }
 
 .bg-gradient-to-tl {
-  background-image: linear-gradient(184.78deg, #fa709a 7.64%, #fee140 120.07%);
+  background-image: linear-gradient(184.78deg, #9370DB 7.64%, #00CED1 120.07%);
 }
 
 .bg-gradient {
-  background-image: linear-gradient(184.78deg, #fa709a 7.64%, #fee140 120.07%);
+  background-image: linear-gradient(184.78deg, #9370DB 7.64%, #00CED1 120.07%);
 }
