`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -59,7 +59,7 @@ const page_data = {
                 <p class="mb-2">
                   <a
                     href="https://juanjaramillo.ai"
-                    class="text-blue-500 hover:underline"
+                    class="text-primary hover:underline"
                   >
                     https://juanjaramillo.ai
                   </a>
@@ -67,7 +67,7 @@ const page_data = {
                 <p class="mb-2">
                   <a
                     href="mailto:hola@juanjaramillo.ai"
-                    class="text-blue-500 hover:underline"
+                    class="text-primary hover:underline"
                   >
                     hola@juanjaramillo.ai
                   </a>
@@ -75,7 +75,7 @@ const page_data = {
                 <p class="mb-2">
                   <a
                     href="tel:+573054206139"
-                    class="text-blue-500 hover:underline"
+                    class="text-primary hover:underline"
                   >
                     (+57) 305 420 6139
                   </a>
