--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -3,22 +3,22 @@
 }
 
 .btn-primary {
-  @apply cursor-pointer rounded-[50px] border-0 bg-gradient-to-tl text-center font-medium text-white hover:shadow-[0px_5px_30px_rgba(252,167,111,0.5)];
+  @apply cursor-pointer rounded-[50px] border-0 bg-gradient-to-tl from-[#9370DB] to-[#00CED1] text-center font-medium text-white hover:shadow-[0px_5px_30px_rgba(147,112,219,0.5)];
 }
 
 .btn-outline-primary {
-  @apply relative rounded-[50px] border-primary bg-transparent text-center capitalize text-dark hover:bg-transparent hover:text-white hover:shadow-[0px_5px_30px_rgba(252,167,111,0.5)] hover:before:opacity-100;
+  @apply relative rounded-[50px] border-[#9370DB] bg-transparent text-center capitalize text-dark hover:bg-transparent hover:text-white hover:shadow-[0px_5px_30px_rgba(0,206,209,0.5)] hover:before:opacity-100;
   &::before {
-    @apply absolute bottom-0 left-0 right-0 top-0 -z-[1] rounded-[inherit] bg-gradient-to-tl opacity-0 transition-[inherit] content-[""];
+    @apply absolute bottom-0 left-0 right-0 top-0 -z-[1] rounded-[inherit] bg-gradient-to-tl from-[#9370DB] to-[#00CED1] opacity-0 transition-[inherit] content-[""];
   }
 }
 
 .btn-outline-white {
-  @apply rounded-[50px] bg-transparent text-center capitalize text-dark;
+  @apply rounded-[50px] bg-transparent text-center capitalize text-[#9370DB];
 }
 
 .btn-white {
-  @apply min-w-[150px] rounded-[50px] border-white bg-white text-center capitalize text-dark shadow-lg hover:shadow;
+  @apply min-w-[150px] rounded-[50px] border-white bg-white text-center capitalize text-[#00CED1] shadow-lg hover:shadow;
 }
 
 .btn-sm {
