`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/layouts/components/about/Works.astro
+++ b/src/layouts/components/about/Works.astro
@@ -6,7 +6,7 @@ const {
 } = Astro.props;
 ---
 
-<section class="section">
+<section id="approach" class="section">
   <div class="container">
     <div class="row items-center justify-between">
       <div class="md:col-5">
