`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/layouts/components/KeyFeatures.astro
+++ b/src/layouts/components/KeyFeatures.astro
@@ -24,7 +24,7 @@ const { title, description, feature_list, footer_title, footer_description } = k
       </div>
     </div>
     <HomapageFeature feature_list={feature_list} client:load />
-    <div class="mt-10 row justify-between text-center lg:text-start">
+    <div class="mt-2 lg:mt-10 row justify-between text-center lg:text-start">
       <div class="lg:col-5">
         <h2 set:html={markdownify(footer_title)} />
       </div>
