--- a/src/layouts/components/Banner.astro
+++ b/src/layouts/components/Banner.astro
@@ -23,7 +23,7 @@ const { title, button, image, content } = banner;
       </div>
       <div class="lg:col-6">
         <Image
-          class="w-full object-contain"
+          class="mt-8 lg:mt-0 w-full object-contain"
           alt="banner"
           src={image}
           width={603}
