--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,10 +12,10 @@ import { getSinglePage } from "@/lib/contentParser.astro";
 import { getTaxonomy } from "@/lib/taxonomyParser.astro";
 import { sortByDate } from "@/lib/utils/sortFunctions";
 import type { TIndexData } from "@/types";
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 
 const { blog_folder } = config.settings;
-const blogIndex = (await getEntryBySlug<any, string>(
+const blogIndex = (await getEntry<any, string>(
   blog_folder,
   "-index",
 )) as TIndexData;
