--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,11 +2,11 @@
 import Base from "@/layouts/Base.astro";
 import { markdownify } from "@/lib/utils/textConverter";
 import { Image } from "astro:assets";
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import config from "@/config/config.json";
 
 const { logo } = config.site;
-const entry = await getEntryBySlug("pages", "404");
+const entry = await getEntry("pages", "404");
 const { Content } = await entry.render();
 ---
 
