--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,10 @@ import KeyFeatures from "@/layouts/components/KeyFeatures.astro";
 import Testimonial from "@/layouts/components/Testimonial.astro";
 import Service from "@/layouts/components/Service.astro";
 import Cta from "@/layouts/partials/Cta.astro";
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import CookieConsent from "../pages/components/CookieConsent"
 
-const homepage = await getEntryBySlug("homepage", "index");
+const homepage = await getEntry("homepage", "index");
 const { banner, key_features, service, testimonial } = homepage.data;
 ---
 
