--- a/src/pages/industries/index.astro
+++ b/src/pages/industries/index.astro
@@ -3,7 +3,7 @@ import PageHeader from "@/components/PageHeader.astro";
 import Shape from "@/components/Shape.astro";
 import Base from "@/layouts/Base.astro";
 import Cta from "@/layouts/partials/Cta.astro";
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 // import CareerBenifits from "@/components/career/CareerBenifits.astro";
 import { Image } from "astro:assets";
 import CareerBenifits from "@/layouts/function-components/CareerBenifits";
@@ -12,7 +12,7 @@ import { getSinglePage } from "@/lib/contentParser.astro";
 import { getTaxonomy } from "@/lib/taxonomyParser.astro";
 import type { TCareerIndex } from "@/types";
 
-const careerIndex = (await getEntryBySlug<any, string>(
+const careerIndex = (await getEntry<any, string>(
   "careers",
   "-index"
 )) as TCareerIndex;
