--- a/src/pages/integrations/index.astro
+++ b/src/pages/integrations/index.astro
@@ -7,8 +7,8 @@ import Cta from "@/layouts/partials/Cta.astro";
 import { getSinglePage } from "@/lib/contentParser.astro";
 import { getTaxonomy } from "@/lib/taxonomyParser.astro";
 import type { TIntegrationsIndex } from "@/types";
-import { getEntryBySlug } from "astro:content";
-const integraionsIndex = (await getEntryBySlug<any, string>(
+import { getEntry } from "astro:content";
+const integraionsIndex = (await getEntry<any, string>(
   "integrations",
   "-index",
 )) as TIntegrationsIndex;
