--- a/src/pages/schedule.astro
+++ b/src/pages/schedule.astro
@@ -3,9 +3,9 @@ import FeatureBanner from "@/components/features/FeatureBanner.astro";
 import Shape from "@/components/Shape.astro";
 import Base from "@/layouts/Base.astro";
 import Cta from "@/layouts/partials/Cta.astro";
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 
-const features = await getEntryBySlug("features", "index");
+const features = await getEntry("features", "index");
 ---
 
 <Base
