`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/pages/landing-page.astro
+++ b/src/pages/landing-page.astro
@@ -4,6 +4,7 @@ import config from "@/config/config.json";
 import Base from "@/layouts/Base.astro";
 import { Image } from "astro:assets";
 import { getEntry } from "astro:content";
+import BannerLandingPage from "@/components/BannerLandingPage.astro";
 
 const entry = await getEntry("contact", "index");
 const { contact_form_action } = config.params;
@@ -21,7 +22,7 @@ const page_data = {
   image={contact.image}
 >
   <section class="page-hero pb-6 pt-16">
-    <div class="container"><PageHeader page_data={page_data} /></div>
+    <BannerLandingPage />
   </section>
 
   <section class="section pt-0">
