`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/pages/landing-page.astro
+++ b/src/pages/landing-page.astro
@@ -1,5 +1,4 @@
 ---
-import PageHeader from "@/components/PageHeader.astro";
 import config from "@/config/config.json";
 import Base from "@/layouts/Base.astro";
 import { Image } from "astro:assets";
@@ -16,7 +15,7 @@ const page_data = {
 ---
 
 <Base
-  title={contact.title}
+  title="Juan Jaramillo AI Consulting Services"
   meta_title={contact.meta_title}
   description={contact.description}
   image={contact.image}
