--- a/src/pages/landing-page.astro
+++ b/src/pages/landing-page.astro
@@ -4,6 +4,7 @@ import Base from "@/layouts/Base.astro";
 import { Image } from "astro:assets";
 import { getEntry } from "astro:content";
 import BannerLandingPage from "@/components/BannerLandingPage.astro";
+import CookieConsent from "../pages/components/CookieConsent";
 
 const entry = await getEntry("contact", "index");
 const { contact_form_action } = config.params;
@@ -95,4 +96,5 @@ const page_data = {
       </div>
     </div>
   </section>
+  <CookieConsent client:load />
 </Base>
