--- a/src/pages/landing-page.astro
+++ b/src/pages/landing-page.astro
@@ -5,6 +5,7 @@ import { Image } from "astro:assets";
 import { getEntry } from "astro:content";
 import BannerLandingPage from "@/components/BannerLandingPage.astro";
 import CookieConsent from "../pages/components/CookieConsent";
+import ChatUI from "@/chat/ChatUI";
 
 const entry = await getEntry("contact", "index");
 const { contact_form_action } = config.params;
@@ -28,21 +29,28 @@ const page_data = {
   <section class="section pt-0">
     <div class="container">
       <div class="row">
-        <div class="mb-10 text-center md:col-6 md:order-2 md:mb-0 md:pt-9">
+        <div class="mb-10 text-center md:col-6 md:order-2 md:mb-0 md:pt-0">
           <div class="contact-img relative inline-flex pb-5 pl-5">
-            <Image
-              src="/images/contact-img.png"
-              height={544}
-              width={500}
-              alt=""
-            />
-            <Image
-              class="absolute bottom-0 left-0 -z-[1] h-14 w-14"
-              src="/images/shape-2.png"
-              alt=""
-              height={56}
-              width={56}
-            />
+            <div>
+              <h3 class="mb-5">
+                Doubts? Questions? Ask our AI Agent!
+              </h3>
+              <p
+                class="text-center mt-4 p-0 lg:mx-0 xl:mx-0 2xl:mx-0 lg:text-md lg:w-full xl:w-full 2xl:w-full"
+              >
+              No more contact forms! Our Agent is trained to answer any type of question you may have regarding the Juan Jaramillo AI Consulting Services, so go ahead and ask!
+              </p>
+              <ChatUI client:load />
+            </div>
+            <div>
+              <Image
+                class="absolute bottom-0 left-0 -z-[1] h-14 w-14"
+                src="/images/shape-2.png"
+                alt=""
+                height={56}
+                width={56}
+              />
+            </div>
           </div>
         </div>
         <div class="md:col-6 md:order-1">
