`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/layouts/components/BannerLandingPage.astro
+++ b/src/layouts/components/BannerLandingPage.astro
@@ -23,7 +23,7 @@
           Harness the Power of Generative AI </br> to Drive Innovation, Efficiency,
           and Growth
         </p>
-        <a class="text-xl lg:text-xl pt-3 xl:pt-3 btn btn-white mt-8" href="/schedule">
+        <a class="text-xl lg:text-xl pt-3 xl:pt-3 btn btn-white mt-8" href="#scheduler">
           Schedule A Free Consultation
         </a>
       </div>
