--- a/src/pages/landing-page.astro
+++ b/src/pages/landing-page.astro
@@ -26,19 +26,58 @@ const page_data = {
     <BannerLandingPage />
   </section>
 
+  <section id="scheduler" class="section">
+    <div class="container">
+      <div class="row">
+        <div
+          class="mb-14 text-center lg:mb-0 lg:text-center xl:text-center 2xl:text-center"
+        >
+          <ul
+            class="breadcrumb mb-8 inline-flex h-8 items-center justify-center space-x-2 rounded-3xl bg-theme-light px-4 py-2"
+          >
+            <li class="leading-none text-dark">
+              <p class="inline-flex items-center text-primary">
+                <span class="text-sm leading-none">Start Now!</span>
+              </p>
+            </li>
+            <li class="leading-none text-dark">
+              <span class="text-sm leading-none">Get a Free Consultation</span>
+            </li>
+          </ul>
+          <h1 class="text-center">
+            Transform Your Business with AI Expertise. Let's talk.
+          </h1>
+          <p class="my-6 text-center">
+            Schedule a free consultation to explore how our tailored AI
+            solutions can drive innovation, efficiency, and growth for your
+            company. Let's turn your AI vision into reality.
+          </p>
+        </div>
+        <div>
+          <iframe
+            class="bg-transparent"
+            src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2UBV6tOwbDw-LRuYENSVjDXNgFwk5isyLpkDD73rQ03zrKxG12PXOJosrBtf_4lyDzDpbKc3uK?gv=true"
+            style="border: 0"
+            width="100%"
+            height="1200"></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="section pt-0">
     <div class="container">
       <div class="row">
         <div class="mb-10 text-center md:col-6 md:order-2 md:mb-0 md:pt-0">
           <div class="contact-img relative inline-flex pb-5 pl-5">
             <div>
-              <h3 class="mb-5">
-                Doubts? Questions? Ask our AI Agent!
-              </h3>
+              <h3 class="mb-5">Doubts? Questions? Ask our AI Agent!</h3>
               <p
                 class="text-center mt-4 p-0 lg:mx-0 xl:mx-0 2xl:mx-0 lg:text-md lg:w-full xl:w-full 2xl:w-full"
               >
-              No more contact forms! Our Agent is trained to answer any type of question you may have regarding the Juan Jaramillo AI Consulting Services, so go ahead and ask!
+                No more contact forms! Our Agent is trained to answer any type
+                of question you may have regarding the Juan Jaramillo AI
+                Consulting Services, so go ahead and ask!
               </p>
               <ChatUI client:load />
             </div>
