`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/pages/landing-page.astro
+++ b/src/pages/landing-page.astro
@@ -36,21 +36,21 @@ const page_data = {
             class="breadcrumb mb-8 inline-flex h-8 items-center justify-center space-x-2 rounded-3xl bg-theme-light px-4 py-2"
           >
             <li class="leading-none text-dark">
-              <p class="inline-flex items-center text-primary">
-                <span class="text-sm leading-none">Start Now!</span>
+              <p class="inline-flex items-center text-dark">
+                <span class="text-sm leading-none">Get a Free Consultation</span>
               </p>
             </li>
-            <li class="leading-none text-dark">
-              <span class="text-sm leading-none">Get a Free Consultation</span>
+            <li class="leading-none text-primary">
+              <span class="text-sm leading-none">Start Now!</span>
             </li>
           </ul>
           <h1 class="text-center">
-            Transform Your Business with AI Expertise. Let's talk.
+            Transform Your Business with AI Expertise. <br /> Let's talk.
           </h1>
           <p class="my-6 text-center">
             Schedule a free consultation to explore how our tailored AI
             solutions can drive innovation, efficiency, and growth for your
-            company. Let's turn your AI vision into reality.
+            company. <br /> Let's turn your AI vision into reality.
           </p>
         </div>
         <div>
@@ -68,6 +68,15 @@ const page_data = {
   <section class="section pt-0">
     <div class="container">
       <div class="row">
+        <div
+          class="mb-6 text-center lg:mb-0 lg:text-center xl:text-center 2xl:text-center"
+        >
+          <h1 class="mb-12 text-center">
+            Contact Us
+          </h1>
+        </div>
+      </div>
+      <div class="row">
         <div class="mb-10 text-center md:col-6 md:order-2 md:mb-0 md:pt-0">
           <div class="contact-img relative inline-flex pb-5 pl-5">
             <div>
@@ -75,7 +84,7 @@ const page_data = {
               <p
                 class="text-center mt-4 p-0 lg:mx-0 xl:mx-0 2xl:mx-0 lg:text-md lg:w-full xl:w-full 2xl:w-full"
               >
-                No more contact forms! Our Agent is trained to answer any type
+                Our Agent is trained to answer any type
                 of question you may have regarding the Juan Jaramillo AI
                 Consulting Services, so go ahead and ask!
               </p>
