--- a/src/pages/landing-page.astro
+++ b/src/pages/landing-page.astro
@@ -5,7 +5,10 @@ import { Image } from "astro:assets";
 import { getEntry } from "astro:content";
 import BannerLandingPage from "@/components/BannerLandingPage.astro";
 import CookieConsent from "../pages/components/CookieConsent";
+import Accordion from "@/pages/components/accordion.mdx";
+import { AiFillCheckCircle } from "react-icons/ai";
 import ChatUI from "@/chat/ChatUI";
+import Cta from "@/layouts/partials/Cta.astro";
 
 const entry = await getEntry("contact", "index");
 const { contact_form_action } = config.params;
@@ -24,6 +27,7 @@ const page_data = {
 >
   <section class="page-hero pb-6 pt-16">
     <BannerLandingPage />
+    <Accordion />
   </section>
 
   <section id="scheduler" class="section">
@@ -153,4 +157,5 @@ const page_data = {
     </div>
   </section>
   <CookieConsent client:load />
+  <Cta />
 </Base>
